2006-04-22  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (gpg4win_spkgs): Move man_novice_de and
	man_advanced_de to ...
	(gpg4win_ipkgs): ... here.
	* src/gpg4win.mk.in (IPKG_template): New template.
	Insert it for each internal package.

2006-04-20  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Pop up a message before shutting down winpt.

2006-04-19  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Abort installation if not run as Admin.

2006-04-08  Marcus Brinkmann  <marcus@g10code.de>

	* m4/gpg4win.m4 (GPG4WIN_IPKG): New macro for internal packages.
	* include/config.nsi.in (gpg4win_pkg_man_novice_de,
	gpg4win_pkg_man_novice_de_version, gpg4win_pkg_man_advanced_de,
	gpg4win_pkg_man_advanced_de_version): Removed.
	* src/installer.nsi [GPG4WIN_LIGHT]: Set the output filename for
	the light installer.
	* configure.ac: New option --enable-light-installer to control the
	new automake conditional BUILD_LIGHT_INSTALLER.
	Make packages man_novide_de and man_advanced_de included packages.
	* src/Makefile.am (gpg4win-light-$(VERSION).exe): New target.
	(all_src, all_light): New variables.
	(all-local): Use all_src and all_light.
	* src/gpg4win.nsi [GPG4WIN_LIGHT]: Undefine HAVE_PKG_MAN_NOVICE_DE
	and HAVE_PKG_MAN_ADVANCED_DE.

2006-04-07  Werner Koch  <wk@g10code.com>

	* configure.ac: Use new method to include the SVN revison.  Now it
	is the actual global revision number.

2006-04-06  Werner Koch  <wk@g10code.com>

	Released 1.0.0.

2006-04-05  Werner Koch  <wk@g10code.com>

	* NEWS: Recoded to latin1.

2006-04-04  Werner Koch  <wk@g10code.com>

	* NEWS: Reformatted.

2006-04-03  Werner Koch  <wk@g10code.com>

	* src/inst-gnupg.nsi: Now that 1.4.3 has been released tehr eis no
	more need trying to install the http keyserver helper.

2006-04-01  Timo Schulz  <ts@g10code.com>

	* src/inst-sections.nsi: WinPT desktop link now
	directly starts the key manager.
	
2006-03-29  Werner Koch  <wk@g10code.com>

	Released 1.0.0rc1.
